# mocr

./: .env.example  .gitignore  README.md  app.py  plan.md  pyproject.toml  requirements-base.txt  requirements-detect.txt  requirements-intel.txt  requirements-ocr.txt  requirements-translate.txt  requirements-upscale.txt  requirements.txt  test_esrgan.py
cpu_manga_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manga_translator/: config.py  detect.py  image_io.py  inpaint.py  model_lifecycle.py  model_manager.py  models.py  ocr.py  pipeline.py  profiles.py  render.py  setup_check.py  text_processing.py  translate.py  ui.py  upscale.py
models/translation/fugumt-ja-en/: README.md  config.json  generation_config.json
models/translation/sugoi-v4-ja-en-ctranslate2/: README.md  source_vocabulary.json  target_vocabulary.json
models/translation/sugoi-v4-ja-en-ctranslate2/spm/: spm.en.nopretok.model  spm.ja.nopretok.model
scripts/: check_setup.py  download_models.py
tests/: test_config.py  test_inpaint.py  test_model_manager.py  test_outputs.py  test_regions.py  test_render.py  test_setup_check.py  test_text_split.py  test_ui.py  test_ui_config.py
